playground/notas_tests/valid/type-05.hulk
type Bird() {}
type Plane() {}
type Superman() {}
let x = new Superman() in print(if (x is Bird) "bird" else "super");
