playground/notas_tests/invalid/syn-let-at-init.hulk
let x = @ in print(x);
